--- a/DemoMVCMySql/bin/DemoMVCMySql.dll.config
+++ b/DemoMVCMySql/bin/DemoMVCMySql.dll.config
@@ -17,7 +17,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-  </system.web>
+  <pages>
+      <namespaces>
+        <add namespace="GridMvc" />
+      </namespaces>
+    </pages></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -26,11 +30,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -41,9 +45,14 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="samsjacksonvilleEntities" connectionString="metadata=res://*/MySQlKIPPModel.csdl|res://*/MySQlKIPPModel.ssdl|res://*/MySQlKIPPModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;password=Golf9898!;user id=root;database=samsjacksonville;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="samsjacksonvilleEntities" connectionString="metadata=res://*/MySQlKIPPModel.csdl|res://*/MySQlKIPPModel.ssdl|res://*/MySQlKIPPModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;password=KIPPDemo;user id=KIPPDemo;database=samsjacksonville;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
