--- a/DemoMVCMySql/packages.config
+++ b/DemoMVCMySql/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Dapper" version="1.40" targetFramework="net452" />
+  <package id="Dapper.Rainbow.MySql" version="0.7.1" targetFramework="net452" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net452" />
+  <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
+  <package id="Grid.Mvc.Redux" version="1.0.4" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -10,4 +14,5 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="MySql.Data" version="6.9.7" targetFramework="net452" />
 </packages>
