--- a/DemoMVCMySql/DemoMVCMySql.csproj
+++ b/DemoMVCMySql/DemoMVCMySql.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\Shared\_GridPager.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\Shared\_AjaxGridPager.cshtml" />
+    <Content Include="Views\Shared\_SideMenu.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
